# voa-agent

./: .gitignore  Dockerfile.fastify  Dockerfile.nextjs  README.md  docker-compose.yml  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  repomix.config.json  vercel.json
Arch/: 01_system_architecture.md  02_database_storage.md  03_onboarding_flow.md  04_vector_training_flow.md
app/: globals.css  layout.tsx  page.tsx
aws-infra/: app.py  cdk.json  package-lock.json  package.json  requirements.txt  tsconfig.json  voxa_stack.py
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/agent/: Dockerfile  main.py  pyproject.toml
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/agent/routes/: turn.py  webhook.py
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/agent/tests/: test_turn.py
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/core/: pyproject.toml
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/core/tests/: test_llm.py  test_pii.py  test_whatsapp.py
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/core/voxa/: calendar.py  llm.py  models.py  processor.py  whatsapp.py
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/worker/: Dockerfile  fine_tuning.py  post_call.py  pyproject.toml
aws-infra/cdk.out/asset.b31a8a59da870d9aa4205d4eb7915879f06fd97da4e964577ed6e443b4e46d67/worker/tests/: conftest.py  test_fine_tuning.py  test_post_call.py
components/: AuthLayout.tsx  DashboardShell.tsx  FadeIn.tsx  Footer.tsx  Hero.tsx  HeroCard.tsx  HowItWorks.tsx  Metrics.tsx  Nav.tsx  Pricing.tsx  Pulse.tsx  Sidebar.tsx  SkillPacks.tsx  Testimonial.tsx  TweaksPanel.tsx  Verticals.tsx  Waveform.tsx  useTweaks.ts
docs/: ARCHITECTURE.md  SECURITY-RUNBOOK.md  SES-DELIVERABILITY.md
(+136 files in other folders)
