[project]
name = "voxa-agent"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "voxa-core",                    # local editable install
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-json-logger>=2.0.7",
]

[tool.setuptools]
packages = ["ws", "routes"]
py-modules = ["main"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-mock>=3.14"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
