[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxa-core"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "anthropic>=0.40.0",
  "pinecone>=5.0.0",
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
  "spacy>=3.7.4",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "structlog>=24.1.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-mock>=3.14"]

[tool.hatch.build.targets.wheel]
packages = ["voxa"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
