[project]
name = "voxa-worker"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
  "voxa-core",
  "boto3>=1.34.0",
  "structlog>=24.1.0",
]

[tool.setuptools]
py-modules = ["post_call", "fine_tuning"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "pytest-mock>=3.14"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
